--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=practice-test
 
 server.port=3000
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.username=NOT_SET
+spring.data.redis.password=NOT_SET
+spring.data.redis.database=0
